Fixed timing on menu collapse

--- a/styles.scss
+++ b/styles.scss
@@ -82,7 +82,7 @@ body {
 }
 footer {
     margin: 0;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     z-index: 100;
 
